# ckks-noise-proxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
activation_collection/: collect_gelu.py  collect_layernorm.py  collect_softmax.py
depth_sweep/: CMakeLists.txt  depth_sweep_ckks.cpp  plot_sweep.py
fhe_kernels/: CMakeLists.txt  convert_npy_to_bin.py  eval_gelu.cpp  eval_layernorm_inv_sqrt.cpp  eval_softmax.cpp  measure_linear_noise.cpp  plain_vs_ckks.cpp
noise_injection_benchmark/: simulate_noise.py
poly_approximation/: gelu_dong_error_plot.py  plot_gelu_vs_dong.py
results/benchmark_run/: accuracies.csv  accuracies.txt  baseline.json  hook_counts.json  noisy.json
results/noise_catalog/: noise_catalog_empirical.json  sweep_exp.csv
